--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -11895,7 +11895,7 @@ textarea.form-control-lg {
   height: 1120px;
   padding-right: 30px;
   padding-left: 30px;
-  background-image: url("../image/main.png");
+  background-image: url("../../images/main.png");
   background-position: 50% 50%;
   background-size: cover;
 }
