--- a/css/content.css
+++ b/css/content.css
@@ -4,33 +4,6 @@
   box-sizing: border-box;
 }
 
-.article {
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.content {
-  display: flex;
-  padding: 0.3em 0;
-  list-style: none;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
-}
-
-.content__id,
-.content__author,
-.content__date {
-  flex-basis: 10%;
-}
-
-.content__title {
-  flex: 1;
-  text-align: left;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
 
 .buttons {
   position: relative;
@@ -192,4 +165,76 @@ nav a:hover{
   text-align: center;
   position: relative;
   left: 65%;
+}
+
+
+.article {
+  max-width: 960px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+}
+
+.content {
+  display: flex;
+  padding: 0.3em 0;
+  /*list-style: none;*/
+  flex-wrap: wrap;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+  flex-direction: column;
+  /*width: 1254px;*/
+  height: 100px;
+  left: 333px;
+  top: 455px;
+}
+.content__matchState,
+.content__id,
+.content__author,
+.content__date {
+  /*flex-basis: 10%;*/
+}
+
+.content__title {
+  flex: 11;
+  text-align: left;
+  /*overflow: hidden;*/
+  white-space: nowrap;
+  /*text-overflow: ellipsis;*/
+
+  /*width: 450px;*/
+  /*height: 30px;*/
+  /*left: 333px;*/
+  /*top: 455px;*/
+}
+
+.content__author {
+  flex: 50%;
+  text-align: left;
+  overflow: hidden;
+  /*white-space: nowrap;*/
+  text-overflow: ellipsis;
+
+  /*width: 450px;*/
+  /*height: 30px;*/
+  /*left: 333px;*/
+  /*top: 455px;*/
+}
+.content__matchState{
+  flex: 50%;
+  text-align: left;
+  overflow: hidden;
+  /*white-space: nowrap;*/
+  text-overflow: ellipsis;
+}
+.content__date {
+  flex: 1;
+  text-align: right;
+  padding-top: 60px;
+  /*overflow: hidden;*/
+  /*white-space: nowrap;*/
+  /*text-overflow: ellipsis;*/
+}
+.lli{
+  display: list-item;
+  text-align: -webkit-match-parent;
 }
