--- a/css/community.css
+++ b/css/community.css
@@ -96,7 +96,10 @@ nav a{
 nav a:hover{
     color: #00C473;
 }
-
+.thh:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
 .liner{
     width: 100%;
     height: 0px;
