게시글 단건 조회 및 작성 프론트 추가

--- a/css/content.css
+++ b/css/content.css
@@ -136,7 +136,14 @@ nav a{
 }
 nav a:hover{
   color: #00C473;
+  cursor: pointer;
 }
+
+.content__title:hover{
+  text-decoration: underline;
+  cursor: pointer;
+}
+
 
 .liner{
   width: 100%;
