--- a/css/community.css
+++ b/css/community.css
@@ -95,11 +95,13 @@ nav a{
 }
 nav a:hover{
     color: #00C473;
+    cursor: pointer;
 }
 .thh:hover{
     text-decoration: underline;
     cursor: pointer;
 }
+
 .liner{
     width: 100%;
     height: 0px;
