--- a/css/myProfile.css
+++ b/css/myProfile.css
@@ -28,19 +28,14 @@ header{
 nav{
     display: flex;
     justify-content: start;
-    padding-left: 277px;
-
-    /*margin-top: 100px;*/
-    /*border-bottom: 2px solid #00C473;*/
-    /*padding: 20px;*/
-    display: flex;
 
     width: 100%;
     height: 53px;
-    left: 0px;
-    top: 169px;
 
+}
 
+.nav1{
+    padding-left: 277px;
 }
 nav a{
     text-decoration: none;
@@ -49,7 +44,6 @@ nav a{
     left: 477px;
     top: 169px;
 
-    font-family: 'Inter';
     font-style: normal;
     font-weight: 400;
     font-size: 20px;
@@ -61,9 +55,9 @@ nav a{
 }
 
 .a3{
-    color: #17ac22;
+    color: #00C473;
 }
-nav a:hover{
+.nav1 a:hover{
     color: #00C473;
 }
 
@@ -83,23 +77,20 @@ nav a:hover{
     align-items: center;
     text-align: center;
 }
-.postBox{
-
-    /*justify-content: center;*/
-    /*align-items: center;*/
-    width: 1086px;
+.userInfo{
+    width: 100%;
     height: 260px;
-    left: 417px;
-    top: 269px;
-    padding: 30px;
+    padding: 15px 30px;
 
     border: 2px solid rgba(170, 170, 170, 0.3);
     border-radius: 20px;
+
+    display: flex;
+    flex-direction: column;
 }
 
 .liner2{
-    width: 1086px;
-    height: 0px;
+    width: 100%;
     left: 417px;
     top: 627px;
 
@@ -107,78 +98,42 @@ nav a:hover{
 }
 
 .nav2{
-    margin-left: 33.3333333%;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    text-align: center;
-
-    /*margin-top: 100px;*/
-    /*border-bottom: 2px solid #00C473;*/
-    padding: 20px;
-
-
-    width: 420px;
-    height: 53px;
-    left: 758px;
-    top: 574px;
-
+    width: 100%;
+    padding: 0 36% !important;
 }
-.nav2 b{
-    text-decoration: none;
+.nav2 a{
+    flex: 1 auto;
+    align-items: stretch;
     color: #333333;
     padding: 14px;
-    left: 477px;
-    top: 169px;
 
     font-style: normal;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 24px;
 
     text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+    cursor: pointer;
 }
-.b1{
-    color: #17ac22;
+.nav2 > .b1{
+    color: #00C473;
+}
+.nav2 > .b2{
+    color: black;
 }
 
-.nav2 b:hover{
+.nav2 a:hover{
     color: #00C473;
 }
 
-.BoxUserName{
-    float: left;
-    width: 150px;
-    height: 40px;
-    left: 462px;
-    top: 307px;
-
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 25px;
-    line-height: 30px;
-    display: flex;
-    align-items: center;
-}
-.Box2{
-
-}
 .modifyBtn{
-    margin-left: 650px;
-    float: left;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    flex: 1 0 0;
     text-align: center;
-    width: 180px;
-    height: 40px;
-    left: 1278px;
-    top: 302px;
+
+    width: 140px;
+    height: 100%;
+    font-size: 16px;
 
     background: #FFFFFF;
     border: 1px solid #AAAAAA;
@@ -188,53 +143,17 @@ nav a:hover{
 
 .modifyBtn:hover{
 
-    border: solid 3px black;
-    color: black;
+    border: solid 3px #00C473;
+    color: white;
     background-color: #00C473;
 }
 
-.aboutMe{
-    width: 100%;
-    height: 100px;
-    left: 462px;
-    top: 360px;
-
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-    display: flex;
-    align-items: center;
-}
 
 .major1{
     margin-bottom: 5px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 125px;
     height: 35px;
-    left: 462px;
-    top: 408px;
-
-    background: rgba(170, 170, 170, 0.2);
-    border-radius: 10px;
-}
-
-.major2{
-    float: left;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    width: 187px;
-    height: 35px;
-    left: 462px;
-    top: 455px;
+    font-size: 20px;
+    padding: 5px 20px;
 
     background: rgba(170, 170, 170, 0.2);
     border-radius: 10px;
@@ -303,5 +222,102 @@ table.type03 td {
 
     align-items: center;
     text-align: center;
+}
 
+.postBox{
+    height: 400px;
+}
+
+.btn-submit {
+    width: 150px;
+    height: 40px;
+    border: solid 3px #00C473;
+    border-radius: 10px;
+    font-size: 25px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+    background-color: #00C473;
+    margin-left: 10px;
+}
+.btn-submit:hover {
+    background-color: green;
+    border: solid 3px green;
+    color: white;
+}
+
+.btn-redirect {
+    width: 150px;
+    height: 40px;
+    border: solid 3px #00C473;
+    border-radius: 10px;
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    color: white;
+    cursor: pointer;
+    background-color: #00C473;
+    margin-left: 10px;
+}
+.btn-redirect:hover {
+    background-color: green;
+    border: solid 3px green;
+    color: white;
+}
+
+.content_1 {
+    display: flex;
+    padding: 0.3em 0;
+    /*list-style: none;*/
+    flex-wrap: wrap;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    flex-direction: column;
+    /*width: 1254px;*/
+    height: 100px;
+    left: 333px;
+    top: 455px;
+}
+
+.content__title {
+    font-size: large;
+    flex: 40%;
+    text-align: left;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+
+.content__matchState{
+    width: 300px;
+    padding-top: 2.77%;
+    text-align: left;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.content__date {
+    flex: 10%;
+    text-align: right;
+    padding-top: 60px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+}
+.li_1{
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
+.content__body {
+    font-size: large;
+    flex: 5 0;
+    text-align: left;
+}
+.content__btn {
+    flex: 1 0;
+}
+.content_3 {
+    display: flex;
+    padding: 0.3em 0;
+    /*list-style: none;*/
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+    flex-direction: row;
 }
